# MatLibraryPy

./: .gitignore  CMakeLists.txt  MatLibraryPy.cpp  README.md  main.cpp  matrix.hpp
data/: plotData.ipynb  tiempos_boost.csv  tiempos_swig.csv
swig/: build.sh  matrix.hpp
swig/original_data/: matrix.cpp  matrix.hpp
swig/test_matrix/: build.sh  matrix-1.0.egg-info  matrix.cpp  matrix.hpp  matrix.i  matrix.py  matrix_wrap.cpp  matrix_wrap.cxx  output.matrix  setup.py  test.matrix  test.py  tiempos_swig.csv
